style.css
html {
  	box-sizing: border-box;
  	height: 100%;
  	width: 100%;
  	overflow-x: hidden;
	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#70b291+0,16586a+100 */
	background: #70b291; /* Old browsers */
	background: -moz-linear-gradient(left,  #70b291 0%, #16586a 100%); /* FF3.6-15 */
	background: -webkit-linear-gradient(left,  #70b291 0%,#16586a 100%); /* Chrome10-25,Safari5.1-6 */
	background: linear-gradient(to right,  #70b291 0%,#16586a 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#70b291', endColorstr='#16586a',GradientType=1 ); /* IE6-9 */
}


*, *:before, *:after {
  	box-sizing: inherit;
}

* {

-webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none;   /* Chrome/Safari/Opera */
  -khtml-user-select: none;    /* Konqueror */
  -moz-user-select: none;      /* Firefox */
  -ms-user-select: none;       /* Internet Explorer/Edge */
  user-select: none;           /* Non-prefixed version, currently
                                  not supported by any browser */
  -webkit-tap-highlight-color: rgba(0,0,0,0);
}

body {
	color: white;
	font-family: 'Quicksand', sans-serif;
	font-weight: 300;
	display: flex;
	flex-direction: column;
	min-height: 100vh;
	overflow-x: hidden;
  width: 100%;
}

nav {
	margin-bottom: 50px;
  margin-top: 15px;
	padding: 20px 5px 0 5px;
	display: flex;
	flex-wrap: nowrap;
	align-items: center;
	justify-content: center;
}

.title {
	font-size: 3.5em;
	text-align: center;
	font-weight: 400;
	cursor: pointer;
	margin: 0 20px;
	display: inline-block;
}

.slick-div {
  width: 288px;
  margin: 0 auto;
}

.icon {
  width: 120px;
  height: 64px;
}

.chord-icon {
	cursor: pointer;
	width: 64px;
	border: 3px solid transparent;
	margin: 0 10px;
}

.chord-icon:hover {
	border: none;
	width: 64px;
}

canvas {
	margin: 10px;
}

main {
  width: 100%;
}


.pulsate {
	-webkit-animation-name: pulsate;
	animation-name: pulsate;
	-webkit-animation-duration: 1.1s;
	animation-duration: 1.1s;
    -webkit-animation-iteration-count: infinite;
}

@-webkit-keyframes pulsate {
    0% {-webkit-transform: scale(1)}
    50% {-webkit-transform: scale(1.025)}
    100% {-webkit-transform: scale3d(1)}
}

@keyframes pulsate {
    0% {-webkit-transform: scale(1)}
    50% {-webkit-transform: scale(1.025)}
    100% {-webkit-transform: scale3d(1)}
}


.chord-name {
	font-weight: 400;
	font-size: 2.5em;
	text-align: center;
	margin: 0;
	-webkit-margin-after: 0;
}

.chord-menu {
	display: flex;
	justify-content: center;
	width: 100%;
	font-size: 3em;
	padding: 10px;
	margin-bottom: 40px;
  	flex-wrap: wrap;
  	align-items: center;
}

.key-icon{
	width: 100px;
	margin:  20px 10px 20px 20px;
}

.root-note, .maj-min {
	display: flex;
	margin-left: 40px;
}

.a, .c, .d, .e, .g, .major, .minor {
	cursor: pointer;
	margin: 20px;
}


.bold {
	font-weight: 700;
}

.chord-family-letter, .chord-family-numeral {
  font-size: 3em;
  text-align: center;
}

.chord-family-numeral {
  font-family: 'Josefin Slab', serif;
  font-size: 2em;

}

.flat-numeral {
	font-size: 80%;
	vertical-align: 3px;
	margin-right: 0;
}

.full-dim-numeral, .half-dim-numeral {
	font-size: 80%;
	padding: 0 3px;
}

.chord-list-container {
  display: flex;
  margin: 0 auto;
  width: 900px;
}

.chord-list-title {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 200px;
  padding-right: 50px;
}

.chord-list {
  width: 700px;
}

.chord-container {
	cursor: pointer;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.chord-container-container {
  width: 100%;
  padding: 40px;
}

.sharp, .flat {
	font-size: 60%;
	vertical-align: 5px;
	margin: 0 -3px;
}

.half-dim, .full-dim {
	font-size: 65%;
}

.flat-landing {
	font-size: 65%;
	vertical-align: 9px;
	margin: 0 -10px;
}

.sharp-landing {
	font-size: 60%;
	vertical-align: 10px;
	margin: 0 -5px;
}

.landing-chord {
	font-size: 4.5em;
	padding-left: 15px;
}

.half-dim-landing, .full-dim-landing, .sup-landing {
	font-size: 60%;
	vertical-align: 10px;
}

sup {
	font-size: 60%;
	vertical-align: 5px;
}

footer {
	display: flex;
	justify-content: space-around;
	flex-wrap: wrap;
	margin-bottom: 10px;
  	margin-top: auto;
  	padding-top: 40px;
}

a {
	text-decoration: none;
	color: white;
	cursor: pointer;
}

td {
	padding: 5px;
}

table {
	padding: 0 10px;
}

.landing-left-arrow, .landing-right-arrow {
  zoom: 0.8;
  -moz-transform: scale(0.8);
}

.landing-left-arrow {
    left: -100px;
}

.landing-right-arrow {
    right: -100px;
}

.chord-page-left-arrow, .chord-page-right-arrow {
  zoom: 0.6;
  -moz-transform: scale(0.6);
  z-index: 2;
}

.chord-page-left-arrow {
  left: 0;
}

.chord-page-right-arrow {
  right: 0;
}

.slick-prev, .slick-next {
	opacity: .75;
}

.js-prev:hover, .js-next:hover {
	opacity: 1;
}

.slick-disabled:hover {
	opacity: .25;
}

.slick-disabled {
	opacity: .25;
	cursor: auto;
}


:focus { outline: none; }


@media screen and (max-width: 1000px) {
	.chord-menu {
		zoom: 0.7;
    -moz-transform: scale(0.7);
	}
	.chord-list-container {
		width: 700px;
		zoom: 0.8;
    -moz-transform: scale(0.8);
	}
	.chord-list-title {
		width: 150px;
	}
	.chord-list {
		width: 550px;
	}
}


@media screen and (max-width: 600px) {
	.title {
		font-size: 35px;
		text-align: left;
	}
	.landing-left-arrow {
		left: -60px;
	}
	.landing-right-arrow {
    	right: -60px;
	}
	.chord-list-container {
		width: 600px;
		zoom: 0.6;
    -moz-transform: scale(0.6);
	}
	.chord-list-title {
		width: 100px;
	}
	.chord-list {
		width: 500px;
	}
}

@media screen and (max-width: 427px) {
	header {
		height: 110px;
	}
	.title {
		font-size: 35px;
		padding-right: 0;
	}
	.chord-icon {
		margin: 0;
		zoom: 0.6;
    -moz-transform: scale(0.6);
	}
	.chord-menu {
		zoom: 0.65;
    -moz-transform: scale(0.65);
    padding: 0;
	}
	.maj-min {
		margin-left: 0;
	}
	.root-note {
		margin: 0 40px;
	}
	.slick-div {
		margin-top: 40px;
		zoom: 0.8;
    -moz-transform: scale(0.8);
	}
	.landing-left-arrow {
		left: -60px;
	}
	.landing-right-arrow {
    	right: -60px;
	}
	.chord-page-left-arrow {
		left: -40px;
	}
	.chord-page-right-arrow {
		right: -40px;
	}
	.chord-list-container {
		width: 400px;
	}
	.chord-list-title {
		width: 120px;
		font-size: 80%;
		padding-right: 25px;
	}
	.chord-list {
		width: 280px;
	}
	.chord-container-container {
		padding: 20px;
	}
}

@media screen and (max-width: 375px) {
	nav {
		margin-bottom: 20px;
	}
	.slick-div {
		margin-top: 10px;
	}
}


@media screen and (max-width: 340px) {
	.title {
		font-size: 27px;
	}
	.slick-div {
		margin-top: 10px;
		zoom: 0.6;
    -moz-transform: scale(0.6);
	}
}

